[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/dr.gd" type="Script" id=1]
[ext_resource path="res://assets/blast5.mp3" type="AudioStream" id=2]
[ext_resource path="res://assets/bigbad.png" type="Texture" id=3]
[ext_resource path="res://assets/exp_part1.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 88, 48 )

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 2 )
colors = PoolColorArray( 1, 1, 1, 1, 0, 0, 0, 1 )

[node name="Dr" type="Area2D"]
collision_layer = 2
collision_mask = 256
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = -1.5708
scale = Vector2( 0.5, 0.6 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PewPewCoolDown" type="Timer" parent="."]
wait_time = 10.0

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 32.0
margin_top = -1.0
margin_right = 72.0
margin_bottom = 13.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="SoundEfxStop" type="Timer" parent="."]
wait_time = 1.25

[node name="ExplosionParticles" type="CPUParticles2D" parent="."]
emitting = false
amount = 128
explosiveness = 1.0
texture = ExtResource( 4 )
emission_shape = 1
emission_sphere_radius = 16.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
angular_velocity = 10.0
angular_velocity_random = 1.0
orbit_velocity = 5.0
orbit_velocity_random = 1.0
linear_accel = 5.0
color_ramp = SubResource( 2 )

[connection signal="area_shape_entered" from="." to="." method="_on_Baddie_area_shape_entered"]
[connection signal="timeout" from="PewPewCoolDown" to="." method="_on_PewPewCoolDown_timeout"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="SoundEfxStop" to="." method="_on_SoundEfxStop_timeout"]
